--- a/pet-491b/client/src/components/Signup/styles.module.css
+++ b/pet-491b/client/src/components/Signup/styles.module.css
@@ -88,7 +88,7 @@
 }
 
 
-.green_btn {
+.register_btn {
 	border: none;
 	outline: none;
 	padding: 12px 0;
@@ -111,7 +111,7 @@
 	align-self: center;
 }
 
-.white_btn{
+.login_btn{
 	border: none;
 	color: #2342a7;
 	outline: none;
