--- a/pet-491b/client/src/components/Pet/styles.css
+++ b/pet-491b/client/src/components/Pet/styles.css
@@ -1,16 +1,37 @@
 .pet-list-container {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .pet-box {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .image-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-  }
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.horizontal-pet-list {
+  display: flex;
+  overflow-x: auto;
+  margin-top: 10px;
+}
+
+.pet-card {
+  border: 1px solid #ccc;
+  padding: 30px;
+  margin-right: 10px;
+  width: 300px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.pet-card h2 {
+  margin-bottom: 10px;
+}
+
+.image-container {
+  flex-grow: 1; /* Take remaining space within the pet-card */
+  display: flex;
+  align-items: center; /* Align items vertically in the center */
+  justify-content: center; /* Align items horizontally in the center */
+}
+
+.image-container img {
+  max-width: 100%; /* Make the image responsive and fit within its container */
+  max-height: 100%; /* Set a maximum height to maintain consistency */
+}
+
