Modifed the name of component and fix the images

--- a/React_491Project/my-react-app/src/Components/Quick_FAQ/Quick_FAQ.module.css
+++ b/React_491Project/my-react-app/src/Components/Quick_FAQ/Quick_FAQ.module.css
@@ -2,6 +2,7 @@
     max-width: 1200px; /* Or your preferred max width */
     margin: 0 auto; /* Center the FAQ section */
     padding: 20px;
+    border: solid red;
   }
   
   .head_of_faq {
