--- a/React_491Project/my-react-app/src/App.css
+++ b/React_491Project/my-react-app/src/App.css
@@ -1,12 +1,52 @@
-:root{
-    --background-color-day-mode: #f2f2f2;
-    --background-color-night-mode: #1a1a1a;
-    --text-color-day-mode: #000000;
-    --text-color-night-mode: #f5f5dc;
+:root {
+  --background-color-day-mode: #f2f2f2;
+  --background-color-night-mode: #1a1a1a;
+  --text-color-day-mode: #000000;
+  --text-color-night-mode: #f5f5dc;
 }
 
 body {
-    background-color: var(--background-color-day-mode);
-    color: var(--text-color-day-mode);
+  background-color: var(--background-color-day-mode);
+  color: var(--text-color-day-mode);
+  transition: background-color 1s, color 0.5s;
+}
+.service_section {
+  z-index: 1;
+  width: 100%;
+  background-color: #ffdb7d;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+  overflow: hidden;
 }
 
+.footer {
+  text-align: center;
+  background-color: rgb(8, 199, 199);
+  margin: 0;
+  transition: background-color 0.5 ease;
+}
+.nightMode {
+  background-color: #171717; /* Dark background for night mode */
+  color: #f5f5dc; /* Light text for contrast */
+}
+
+.nightMode a {
+  color: #f5f5dc;
+}
+
+.nightMode hr {
+  color: black;
+}
+
+.nightMode .service_section {
+  background-color: #171717;
+}
+
+.nightMode .service_section p {
+  color: #171717;
+}
+
+.nightMode .footer {
+  background-color: #171717;
+}
