--- a/pet-491b/client/src/components/Header/header.module.css
+++ b/pet-491b/client/src/components/Header/header.module.css
@@ -1,180 +1,221 @@
 .header {
-    background-color: rgb(8, 199, 199);
-    display: flex;
-    align-items: center;
-    transition: background-color 0.5s, color 0.5s;
-  }
-  
-  
-  /*Styling the logo*/
-  .logo {
-    width: 250px;
-    height: auto;
-    margin: 0;
-  }
-  
+  background-color: rgb(8, 199, 199);
+  display: flex;
+  align-items: center;
+  transition: color 0.5s ease-in-out;
+  transition: background-color 1s ease-in-out;
+}
+
+.nightHeader {
+  /* Darker background for night mode */
+  display: flex;
+  align-items: center;
+  background-color: black;
+  transition: color 0.5s ease-in-out;
+  transition: background-color 1s ease-in-out;
+}
+
+
+/*Styling the logo*/
+.logo {
+  width: 250px;
+  height: auto;
+  margin: 0;
+}
+
+.nav_bar {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+.navList {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.navItem {
+  margin-right: 1.25rem;
+}
+
+.nightNavItem {
+  margin-right: 1.25rem;
+}
+
+.nightNavItem a {
+  color: var(--text-color-night-mode);
+  text-decoration: none;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: transform 1s ease;
+  position: relative;
+}
+.navItem a {
+  text-decoration: none;
+  color: var(--nav-item-color);
+  font-size: 2rem;
+  cursor: pointer;
+  transition: transform 1s ease;
+  position: relative;
+}
+
+.navItem a:hover {
+  transform: scale(1.1);
+  text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.8);
+}
+
+.nightNavItem a:hover {
+  transform: scale(1.1);
+  text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.8);
+}
+
+.navItem a::before {
+  content: ""; /* Empty content for the pseudo-element */
+  position: absolute; /* Position the pseudo-element absolutely within the anchor */
+  width: 100%; /* Make the pseudo-element take up the full width of the anchor */
+  height: 2px; /* Set the height of the pseudo-element to create an underline effect */
+  bottom: 0; /* Position the pseudo-element at the bottom of the anchor */
+  left: 0; /* Position the pseudo-element at the left edge of the anchor */
+  background-color: black;
+
+  /* Set the background color of the pseudo-element to black */
+  transform: scaleX(
+    0
+  ); /* Initially scale the pseudo-element horizontally to 0 (hidden) */
+  transition: transform 0.5s ease-in-out; /* Smooth transition for the transform property */
+  font-weight: bold;
+}
+
+.nightNavItem a::before {
+  content: ""; /* Empty content for the pseudo-element */
+  position: absolute; /* Position the pseudo-element absolutely within the anchor */
+  width: 100%; /* Make the pseudo-element take up the full width of the anchor */
+  height: 2px; /* Set the height of the pseudo-element to create an underline effect */
+  bottom: 0; /* Position the pseudo-element at the bottom of the anchor */
+  left: 0; /* Position the pseudo-element at the left edge of the anchor */
+  background-color: white; /* Set the background color of the pseudo-element to black */
+  transform: scaleX(
+    0
+  ); /* Initially scale the pseudo-element horizontally to 0 (hidden) */
+  transition: transform 0.5s ease-in-out; /* Smooth transition for the transform property */
+  font-weight: bold;
+}
+
+.navItem a:hover::before {
+  transform: scaleX(1);
+}
+.nightNavItem a:hover::before {
+  transform: scaleX(1);
+}
+
+.loginSignup {
+  display: flex;
+  margin-right: 12px;
+}
+
+.loginButton,
+.signupButton {
+  font-size: 1.5rem;
+  padding: 0.5rem 0.5rem;
+  border-radius: 1rem;
+  height: 4rem;
+  width: 9rem;
+  cursor: pointer;
+  transition: opacity 0.5s ease;
+}
+
+.loginButton:hover,
+.signupButton:hover {
+  opacity: 0.7;
+}
+
+.loginButton {
+  margin-right: 10px;
+  background-color: white;
+}
+
+.signupButton {
+  background-color: black;
+  color: whitesmoke;
+}
+
+.nightModeToggle,
+.lightModeToggle {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.nightModeToggle::before {
+  content: "\f186";
+  font-family: "Font Awesome 5 Free";
+  font-size: 2rem;
+}
+
+.lightModeToggle::before {
+  content: "\263C";
+  color: white;
+  font-size: 2rem;
+}
+
+.nightModeToggle:hover::before {
+  color: #171717;
+  opacity: 0.7;
+}
+
+.lightModeToggle:hover::before {
+  opacity: 0.7;
+}
+
+/* Hide .nav_bar for widths less than 1440px */
+@media (max-width: 1439px) {
   .nav_bar {
+    opacity: 0;
+  }
+
+  .loginSignup {
+    position: absolute;
+    right: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .img_logo {
     display: flex;
     justify-content: center;
-    margin: auto;
+    width: 100%;
   }
-  
+  .logo {
+    margin: 0 auto;
+    display: block;
+  }
+
+  /* Additional adjustments for other elements inside your header to ensure a cohesive responsive design */
+  .nav_bar {
+    justify-content: center; /* Center the navigation bar items */
+    display: flex;
+    width: 100%;
+    opacity: 1;
+  }
+
   .navList {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+    flex-direction: column; /* Stack navigation items vertically */
+    align-items: center; /* Center-align the stacked items */
   }
-  
-  .navItem {
-    margin-right: 1.25rem;
-  }
-  
-  .navItem a {
-    text-decoration: none;
-    color: black;
-    font-size: 2rem;
-    cursor: pointer;
-    transition: transform 1s ease;
-    position: relative;
-    transition: 0.5s ease;
-  }
-  
-  .navItem a:hover {
-    transform: scale(1.1);
-    text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.8);
-  }
-  
-  .navItem a::before {
-    content: ""; /* Empty content for the pseudo-element */
-    position: absolute; /* Position the pseudo-element absolutely within the anchor */
-    width: 100%; /* Make the pseudo-element take up the full width of the anchor */
-    height: 2px; /* Set the height of the pseudo-element to create an underline effect */
-    bottom: 0; /* Position the pseudo-element at the bottom of the anchor */
-    left: 0; /* Position the pseudo-element at the left edge of the anchor */
-    background-color: black; /* Set the background color of the pseudo-element to black */
-    transform: scaleX(
-      0
-    ); /* Initially scale the pseudo-element horizontally to 0 (hidden) */
-    transition: transform 0.5s ease-in-out; /* Smooth transition for the transform property */
-    font-weight: bold;
-  }
-  
-  .navItem a:hover::before {
-    transform: scaleX(1);
-  }
-  
+
   .loginSignup {
-    display: flex;
-    margin-right: 12px;
-    
+    position: inherit;
+    justify-content: center; /* Centers the login and signup buttons */
+    flex-direction: row; /* Keeps buttons in a row but centered */
+    margin-top: 20px; /* Adds some space between the nav items and the login/signup buttons */
+    width: 100%; /* Takes full width to utilize the centering from justify-content */
+    margin-bottom: 20px;
   }
-  
-  .loginButton,
-  .signupButton {
-    font-size: 1.5rem;
-    padding: 0.5rem 0.5rem;
-    border-radius: 1rem;
-    height: 4rem;
-    width: 9rem;
-    cursor: pointer;
-    transition: opacity 0.5s ease;
-  }
-  
-  .loginButton:hover,
-  .signupButton:hover {
-    opacity: 0.7;
-  }
-  
-  .loginButton {
-    margin-right: 10px;
-    background-color: white;
-  }
-  
-  .signupButton {
-    background-color: black;
-    color: whitesmoke;
-  }
-  
-  .nightModeToggle {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-  }
-  
-  .nightModeToggle::before {
-    content: "\f186";
-    font-family: "Font Awesome 5 Free";
-    font-size: 2rem;
-  }
-  
-  .nightMode .nightModeToggle::before {
-    content: "\263C";
-    color: white;
-    font-size: 3.3rem;
-  }
-  
-  .nightModeToggle:hover::before {
-    color: #574ddd;
-  }
-  
-  .nightMode .header {
-    background-color: black;
-  }
-  
-  .nightMode .navItem a {
-    color: rgb(235, 233, 233);
-  }
-  
-  /* Hide .nav_bar for widths less than 1440px */
-  @media (max-width: 1439px) {
-      .nav_bar {
-        opacity: 0;
-      }
-      
-      .loginSignup {
-          position: absolute;
-          right: 20px;
-      }
-    }
-    
-  @media (max-width: 768px) {
-    .header {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .img_logo {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-    }
-    .logo {
-      margin: 0 auto;
-      display: block;
-    }
-  
-    /* Additional adjustments for other elements inside your header to ensure a cohesive responsive design */
-    .nav_bar {
-      justify-content: center; /* Center the navigation bar items */
-      display: flex;
-      width: 100%;
-      opacity: 1;
-    }
-  
-    .navList {
-      flex-direction: column; /* Stack navigation items vertically */
-      align-items: center; /* Center-align the stacked items */
-    }
-  
-    .loginSignup {
-      position: inherit;
-      justify-content: center; /* Centers the login and signup buttons */
-      flex-direction: row; /* Keeps buttons in a row but centered */
-      margin-top: 20px; /* Adds some space between the nav items and the login/signup buttons */
-      width: 100%; /* Takes full width to utilize the centering from justify-content */
-      margin-bottom: 20px;
-  }
-  }
-  
-  
+}
