--- a/pet-491b/client/src/components/PetCare/styles.css
+++ b/pet-491b/client/src/components/PetCare/styles.css
@@ -7,7 +7,7 @@
 }
 
 .search-bar {
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
@@ -24,7 +24,7 @@
 .horizontal-provider-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 20px;
 }
 
@@ -35,15 +35,19 @@
   width: 300px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   text-align: left; /* Change text alignment for the cards */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; 
 }
 
 .provider-card h2, .provider-card p {
   padding: 10px; /* Add padding to match design */
+  margin: 5px 10px;
 }
 
 .image-container {
-  height: 200px; /* Adjust height if necessary */
-  /* Add other styles based on your needs */
+  width: 100%; /* Ensure images resize correctly within the card */
+  height: auto; /* Maintain aspect ratio */
 }
 
 /* Add styles for the footer and navigation bar based on the design */
@@ -56,6 +60,34 @@
   /* Your styles for the navigation bar */
 }
 
+/* Add some bottom margin to the pagination container to ensure it doesn't get covered by the footer */
+.pagination {
+  margin-bottom: 50px; /* Adjust this value based on your footer's height */
+  display: flex;
+  height: 10vh;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .footer {
-  /* Your styles for the footer */
+  margin-top: auto;
+  /* position: fixed; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.social_icons{
+  font-size: 1.2rem;
+  padding-top: 40px;
+}
+
+.social_icons a {
+  margin-right: 15px;
+  color: hsl(0, 0%, 12%);
+  transition: color 0.5s ease opacity 0.2s ease;
 }
