--- a/pet-491b/client/src/components/Pet/styles.css
+++ b/pet-491b/client/src/components/Pet/styles.css
@@ -1,37 +1,51 @@
 .pet-list-container {
   max-width: 800px;
   margin: 0 auto;
+  padding: 20px;
 }
 
-.horizontal-pet-list {
+.vertical-pet-list {
   display: flex;
-  overflow-x: auto;
+  flex-direction: column;
   margin-top: 10px;
 }
 
 .pet-card {
   border: 1px solid #ccc;
-  padding: 30px;
-  margin-right: 10px;
-  width: 300px;
-  height: fit-content;
+  padding: 20px;
+  margin-bottom: 10px;
+  width: 100%; /* Full width */
   display: flex;
   flex-direction: column;
+  align-items: center; /* Center items horizontally */
 }
 
 .pet-card h2 {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .image-container {
-  flex-grow: 1; /* Take remaining space within the pet-card */
-  display: flex;
-  align-items: center; /* Align items vertically in the center */
-  justify-content: center; /* Align items horizontally in the center */
+  width: 100%; /* Full width */
+  margin-bottom: 10px; /* Space below the image */
 }
 
 .image-container img {
-  max-width: 100%; /* Make the image responsive and fit within its container */
-  max-height: 100%; /* Set a maximum height to maintain consistency */
+  width: 100%; /* Image takes full width of the container */
+  height: auto; /* Keep the image aspect ratio */
 }
 
+.pet-description {
+  text-align: left; /* Align text to the left */
+  width: 100%; /* Full width */
+}
+
+.pagination{
+  margin-bottom: 50px; /* Adjust this value based on your footer's height */
+  display: flex;
+  height: 10vh;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
