--- a/React_491Project/my-react-app/src/App.css
+++ b/React_491Project/my-react-app/src/App.css
@@ -11,10 +11,12 @@ body {
   transition: color 0.5s ease-in-out;
   transition: background-color 1s ease-in-out;
 }
+
 .nightMode {
   background-color: #171717; /* Dark background for night mode */
   color: #f5f5dc; /* Light text for contrast */
 }
+
 .service_section {
   z-index: 1;
   width: 100%;
@@ -24,6 +26,20 @@ body {
   position: relative;
   overflow: hidden;
 }
+.calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  /* Enhanced box shadow for a softer, more diffuse look */
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 100px auto;
+  background-color: #FAF9F6; /* Light cream background for a soft, welcoming feel */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
 
 .footer {
   text-align: center;
@@ -32,9 +48,12 @@ body {
   transition: background-color 0.5 ease;
 }
 
-.nightMode a {
+.nightMode a,
+.nightMode h1 {
   color: #f5f5dc;
 }
+
+
 
 .nightMode hr {
   color: black;
