Fix the margin for user profile icon

--- a/pet-491b/client/src/components/Header/header.module.css
+++ b/pet-491b/client/src/components/Header/header.module.css
@@ -146,13 +146,14 @@
   background-color: transparent;
   cursor: pointer;
   border: none;
+  margin-right: 20px;
 }
 
 .nightModeToggle::before {
   content: "\f186";
   font-family: "Font Awesome 5 Free";
   font-size: 2rem;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .lightModeToggle::before {
@@ -220,16 +221,6 @@
     margin-bottom: 20px;
   }
 }
-.userProfile {
-  display: flex;
-  align-items: center;
-  margin-left: auto; /* Aligns the profile icon to the right */
-}
-
-.userProfileLink {
-  display: block;
-  padding: 5px; /* Provides space around the icon */
-}
 
 .userIcon {
   width: 40px; /* Set appropriate size for your icon */
@@ -242,7 +233,9 @@
   display: flex;
   align-items: center;
   gap: 10px; /* Adjust spacing between icons */
-  margin-left: auto; /* Align icons to the right side */
+  margin-left: auto;
+  margin-right: 20px;
+  
 }
 
 .iconLink {
@@ -250,12 +243,6 @@
   padding: 5px; /* Padding around the icon for easier clicking */
 }
 
-.notificationIcon, .userIcon {
-  width: 30px; /* Adjust icon size */
-  height: 30px;
-  border-radius: 50%; /* Circular shape if applicable */
-}
 
-.userIcon {
-  object-fit: cover; /* Ensures the image covers the area properly if it's a photo */
-}
+
+
