Fix logout button

--- a/pet-491b/client/src/components/UserProfile/UserProfile.module.css
+++ b/pet-491b/client/src/components/UserProfile/UserProfile.module.css
@@ -27,17 +27,11 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus, se
     outline: none;
 }
 
-button {
-    background-color: #0056b3;
-    font-size: 1.1em;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
+
+button:hover {
+    background-color: #004494;
 }
+
 
 button:hover {
     background-color: #004494;
@@ -112,7 +106,6 @@ h2 {
     width: 60%;              /* Narrower width for the buttons */
     padding: 8px;            /* Adjust padding to make buttons smaller */
     margin-bottom: 10px;     /* Reduced space between the buttons for a tighter look */
-    background-color: #0056b3;
     color: white;
     border: none;
     cursor: pointer;
@@ -154,3 +147,18 @@ h2 {
 .saveFavoritesButton:hover {
     background-color: #0056b3;
 }
+
+.editButton {
+    background-color: #4CAF50; /* Green background */
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-right: 10px; /* Space between buttons */
+  }
+  
+  .editButton:hover {
+    background-color: #45a049; /* Slightly darker green on hover */
+  }
