--- a/pet-491b/client/src/components/Header/header.module.css
+++ b/pet-491b/client/src/components/Header/header.module.css
@@ -242,3 +242,8 @@
   display: block;
   padding: 5px; /* Padding around the icon for easier clicking */
 }
+.loggoutIcon {
+  width: 30px;
+  height: 30px;
+  color: red;
+}
